GOBBLIN-875: Emit container health metrics when running in cluster mode.